2006-07-13  John Finlay  <finlay@moeraki.com>

	* gtk/gtk-base-types.defs (AccelMap): Add. #337011 (Sebastian Pölsterl)
	(TipsQuery, TargetList, TreePath, FileInfo, FilePath): Add.

	* gtk/gtk.override (_wrap_gtk_accel_map_foreach)
	(_wrap_gtk_accel_map_foreach_unfiltered): Add.
	Fixes #337011 (Sebastian Pölsterl)
	(GtkTipsQuery, GtkTargetList, GtkTreePath, GtkFileInfo, GtkFilePath):
	Ignore types.

	* codegen/codegen.py (SourceWriter.write_registers): Don't write
	registers for ignored types.
	(SourceWriter.write_type_declarations): Don't write type declarations
	for ignored types.

2006-07-13  Johan Dahlin  <jdahlin@async.com.br>

	* codegen/codegen.py:
	* codegen/defsparser.py:
	* configure.in:
	* gtk/Makefile.am:
	* gtk/__init__.py:
	* gtk/_gtk.py:
	* gtk/_lazyutils.py:
	* gtk/deprecation.py:
	* gtk/gtk.override:
	* gtk/gtkmodule.c: (init_gtkimpl):
	* gtk/libglade.override:
	* gtk/libglademodule.c: (init_glade):
	* gtk/pygtk.h:
	* tests/common.py:
	* tests/test_api.py:
	Only load types in gtk when they are used, fixes #346946
	
2006-07-13  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* tests/test_container.py: New unit test to
	set/get_child_property, etc. by Lorenzo Gil Sanchez.

	* tests/Makefile.am (tests): Add test_container.py.

	* gtk/gtkcontainer.override
	(_wrap_GtkContainer__proxy_do_set_child_property): Add missing
	param.

	* gtk/gtkwidget.override (_wrap_gtk_widget_set_activate_signal)
	(_wrap_gtk_widget_get_activate_signal): Add getter and setter for
	GtkWidgetClass->activate_signal.  Fixes #331445.

	* gtk/gtk.override (_wrap_gtk_action_set_menu_item_type): Add
	class method to change GtkActionClass->menu_item_type.
	(_wrap_gtk_action_set_tool_item_type): idem for tool_item_type.
	Fixes #331355.

	* gtk/gtk-base.defs: Declare the missing
	GtkAction.create_menu|tool_item virtuals.

	* examples/gtk/scrollable.py (Layout.do_size_allocate): Save the
	allocation (#341509, Muntyan).

	* gtk/gtk.override (_wrap_GtkEditable__do_insert_text): Impl.