@@ -1,4 +1,12 @@
+2006-07-14  John Finlay  <finlay@moeraki.com>
+
+	* Makefile.am (.defs.c): Aloow libglade and gtkunixprint code
+	generation in place.
+
 2006-07-13  John Finlay  <finlay@moeraki.com>
+
+	* gtk/gtk-2.10-types.defs (TargetList): Move from
+	gtk/gtk-base-types.defs
 
 	* gtk/gtk-base-types.defs (AccelMap): Add. #337011 (Sebastian Pölsterl)
 	(TipsQuery, TargetList, TreePath, FileInfo, FilePath): Add.
